# git_phantom

./: .gitignore  CHANGELOG-cli.md  CHANGELOG-server.md  Cargo.toml  README.md  docker-compose.yaml
.github/workflows/: ci.yaml  release.yaml
crates/cli/: Cargo.toml
crates/cli/src/: command.rs  main.rs  util.rs
crates/cli/src/command/: auth.rs  open.rs  share.rs
crates/core/: Cargo.toml
crates/core/src/: client.rs  types.rs
crates/core/src/client/: join.rs  open.rs
migrations/: 000_init.sql
src/: db.rs  error.rs  main.rs  middleware.rs  route.rs  state.rs
src/db/: channel.rs  rooms.rs  users.rs
src/db/channel/: guest.rs  owner.rs
src/middleware/: session_token.rs  user_id.rs
src/route/: git.rs  oauth2.rs  room.rs  share.rs  user_id.rs
src/route/oauth2/: auth.rs  register.rs
src/route/room/: open.rs
test_resources/: status_404
