[package]
name = "meltos"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/*"
]

[dependencies]
gph_core = { path = "crates/core" }
async-stream = "0.3.6"
thiserror = "1.0.64"
axum = { version = "0.7.4", features = ["ws"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
shuttle-shared-db = { version = "0.47.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.1", features = ["uuid", "time"] }
tokio = "1.28.2"
oauth2 = "4.4.2"
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tower = "0.5.1"
reqwest = { version = "0.12.8", features = ["json"] }
futures-util = "0.3.31"
tracing = "0.1.40"

[dev-dependencies]
lazy_static = "1.5.0"

[workspace.dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
async-trait = "0.1.83"