[package]
name = "gph-server"
version = "0.1.1"
edition = "2021"
readme = "README.md"
authors = ["not-elm"]
keywords = ["git"]
description = "git_phantom server"
license = "MIT OR Apache-2.0"
repository = "https://github.com/not-elm/git_phantom"
publish = false

[workspace]
members = [
    "crates/*"
]

[dependencies]
dotenv = "0.15.0"
gph_core = { path = "crates/core" }
async-stream = "0.3.6"
thiserror = "1.0.64"
axum = { version = "0.7.7", features = ["ws"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
sqlx = { version = "0.8.2", features = ["uuid", "time", "postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
oauth2 = "4.4.2"
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tower = "0.5.1"
reqwest = { version = "0.12.8", features = ["json"] }
http-body-util = "0.1.2"
futures-util = "0.3.31"
tracing = "0.1.40"
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
tokio = "1.40.0"
tokio-tungstenite = "0.24.0"

[workspace.dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
async-trait = "0.1.83"