[package]
name = "gph-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gph"
path = "./src/main.rs"

[dependencies]
gph_core = { path = "../core" }
arboard = "3.4.1"
webbrowser = "1.0.2"
dirs-next = "2.0.0"
clap = { version = "4.5.19", features = ["derive"] }
anyhow = "1.0.89"
reqwest = { version = "0.12.8", features = ["json"] }
axum = { version = "0.7.7" }
tokio = { version = "1.40.0", features = ["sync", "rt-multi-thread", "signal"] }
futures-util = "0.3.31"
tokio-tungstenite = "0.24.0"
serde_json = { workspace = true }
async-trait = { workspace = true }