[package]
name = "gph_cli"
version = "0.1.1"
edition = "2021"
readme = "../../README.md"
description = "Expose local git repository via tunneling server"
authors = ["not-elm"]
keywords = ["git"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/not-elm/git_phantom"

[[bin]]
name = "gph"
path = "./src/main.rs"

[dependencies]
gph_core = { path = "../core", version = "0.1.0" }
arboard = "3.4.1"
webbrowser = "1.0.2"
dirs-next = "2.0.0"
clap = { version = "4.5.19", features = ["derive"] }
anyhow = "1.0.89"
reqwest = { version = "0.12.8", features = ["json"] }
axum = { version = "0.7.7" }
tokio = { version = "1.40.0", features = ["sync", "rt-multi-thread", "process"] }
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
serde_json = { workspace = true }
async-trait = { workspace = true }