[package]
name = "gph_core"
version = "0.1.0"
edition = "2021"
readme = "../../README.md"
description = "git_phantom core library"
authors = ["not-elm"]
keywords = ["git"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/not-elm/git_phantom"

[dependencies]
tokio = "1.40.0"
tokio-tungstenite = "0.24.0"
anyhow = "1.0.89"
futures-util = { version = "0.3.30", features = ["sink"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.10.0", features = ["serde"] }